[package]
name = "yaml-subset"
version = "0.1.9"
authors = ["Jesse Hoobergs <jhoobergs@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A subset of yaml used in rumbas"
repository = "https://github.com/m8rex/yaml-subset"
readme = "README.md"
include = ["src/*.rs", "src/*.pest", "Cargo.toml"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.1"
pest_derive = "2.5.1"
linked-hash-map = "0.5.3"
pest_consume = "1.1.3"
regex = "1"

[dev-dependencies]
insta = "1.23.0"
